<resources>
    <string name="app_name">Pixelate it</string>
    <string name="d_grid">Display Grid</string>
    <string name="d_dot">Display Dot</string>
    <string name="d_gray">To Grayscale</string>
    <string name="p_s">Pixel size</string>
    <string name="i_s">Image size</string>
    <string name="p_r">Pixel Scale</string>
    <string name="parameters">Parameters</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="toast_save">Saved!</string>
    <string name="pick_image">Pick image</string>
    <string name="b_share">Share</string>
    <string name="message">Pixelate It, download on Google Play</string>
    <string name="share_title">Share image using</string>
    <string name="dont_select_image">You haven\'t picked Image</string>
    <string name="sww">Something went wrong</string>
    <string name="notfound">Your device is not supporting the crop action</string>
    <string name="original">originally</string>
    <string name="processed_image">Processed Image</string>
    <string name="message_savefirst">Save the image first</string>
    <string name="ml_face_detecter">Face detector</string>
    <string name="ml_face_invert">Select background</string>
</resources>