<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/AdFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:foregroundGravity="center"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <com.google.android.gms.ads.admanager.AdManagerAdView
            android:id="@+id/adManagerAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="FULL_BANNER"
            ads:adUnitId="ca-app-pub-3688869810838809/9160148766" />
        <!--
        test ca-app-pub-3940256099942544/6300978111

        my   ca-app-pub-3688869810838809/9160148766"-->
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/MainFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintBottom_toTopOf="@+id/ToolFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdFrame"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_imagepick"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/pick_image"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_gallery"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="256dp"
                android:contentDescription="@string/processed_image"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/sb_pixelRate"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:max="10"
                android:progress="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/t_pixel_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/p_r"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sb_pixelRate"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/parameters"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="1dp"
                app:layout_constraintBottom_toTopOf="@+id/t_pixel_rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <Switch
                        android:id="@+id/s_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/d_grid"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <Switch
                        android:id="@+id/s_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/d_dot"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <Switch
                        android:id="@+id/s_gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/d_gray"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <Switch
                        android:id="@+id/s_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/filter"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <Switch
                        android:id="@+id/s_ml_face_detector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/ml_face_detect"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <Switch
                        android:id="@+id/s_ml_face_detector_invert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/ml_face_invert"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/t_pixelSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/p_s" />

                    <TextView
                        android:id="@+id/t_ImageSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/i_s" />
                </TableRow>

            </TableLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ToolFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_reset"
                style="@style/Theme.CButton.Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/reset"
                android:visibility="gone" />

            <Button
                android:id="@+id/b_save"
                style="@style/Theme.CButton.Green"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="#263238"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/b_share"
                style="@style/Theme.CButton.Green"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:contentDescription="@string/b_share"
                app:icon="@android:drawable/ic_menu_share"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Instruction_card"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        ads:cardCornerRadius="30dp"
        ads:cardElevation="10dp"
        ads:cardPreventCornerOverlap="true"
        ads:cardUseCompatPadding="true"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:elevation="10dp"
                android:scaleType="centerCrop"
                ads:srcCompat="@drawable/banner" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Instruction_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instruction_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instruction_text"
                        android:textAlignment="viewStart" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/Instruction_complite"
                style="@style/Theme.CButton.Green"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:text="@string/confirm"
                android:textColor="#263238"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>